--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 Originally based on: Kyle Hall's Libki - http://libki.org/
-This project has been discarded and started over from scratch. The server side code was harder to decifer then it was worth. For new project refer to: http://code.google.com/p/libpac/
+This project has been discarded and started over from scratch. The server side code was harder to decifer then it was worth. For new project refer to: https://github.com/aaronogle/libpac
